<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>gr.uoa.di.madgik</groupId>
        <artifactId>resource-catalogue</artifactId>
        <version>5.4.1-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <artifactId>resource-catalogue-rest</artifactId>
    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <profiles>
        <profile>
            <id>beyond</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <excludes>
                                <exclude>**/controllers/lot1/**</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>lot1</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <excludes>
                                <exclude>**/controllers/MailController.java</exclude>
                                <exclude>**/controllers/WizardController.java</exclude>
                                <exclude>**/controllers/registry/AdapterController.java</exclude>
                                <exclude>**/controllers/registry/ConfigurationTemplateController.java</exclude>
                                <exclude>**/controllers/registry/ConfigurationTemplateInstanceController.java</exclude>
                                <exclude>**/controllers/registry/CSVController.java</exclude>
                                <exclude>**/controllers/registry/DeployableApplicationController.java</exclude>
                                <exclude>**/controllers/registry/OrganisationController.java</exclude>
                                <exclude>**/controllers/publicresources/PublicAdapterController.java</exclude>
                                <exclude>**/controllers/publicresources/PublicConfigurationTemplateInstanceController.java</exclude>
                                <exclude>**/controllers/publicresources/PublicDeployableApplicationController.java</exclude>
                                <exclude>**/controllers/publicresources/PublicOrganisationController.java</exclude>
                                <exclude>**/controllers/registry/CatalogueController.java</exclude>
                                <exclude>**/controllers/registry/DatasourceController.java</exclude>
                                <exclude>**/controllers/registry/InteroperabilityRecordController.java</exclude>
                                <exclude>**/controllers/registry/ResourceInteroperabilityRecordController.java</exclude>
                                <exclude>**/controllers/registry/SecureResponseAdvice.java</exclude>
                                <exclude>**/controllers/registry/ServiceController.java</exclude>
                                <exclude>**/controllers/registry/TrainingResourceController.java</exclude>
                                <exclude>**/controllers/publicresources/PublicDatasourceController.java</exclude>
                                <exclude>**/controllers/publicresources/PublicInteroperabilityRecordController.java</exclude>
                                <exclude>**/controllers/publicresources/PublicResourceInteroperabilityRecordController.java</exclude>
                                <exclude>**/controllers/publicresources/PublicServiceController.java</exclude>
                                <exclude>**/controllers/publicresources/PublicTrainingResourceController.java</exclude>
                                <exclude>**/controllers/StatisticsController.java</exclude>
                                <exclude>**/controllers/registry/sqaaas/SqaaasController.java</exclude>
                                <exclude>**/controllers/registry/sqaaas/SqaaasClient.java</exclude>
                                <exclude>**/controllers/registry/sqaaas/SqaaasAssessmentService.java</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>gr.uoa.di.madgik</groupId>
            <artifactId>resource-catalogue-api</artifactId>
        </dependency>
        <dependency>
            <groupId>gr.uoa.di.madgik</groupId>
            <artifactId>registry-core-api</artifactId>
        </dependency>
        <dependency>
            <groupId>gr.uoa.di.madgik</groupId>
            <artifactId>registry-core-helper</artifactId>
        </dependency>

        <dependency>
            <groupId>jakarta.servlet</groupId>
            <artifactId>jakarta.servlet-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
        </dependency>
        <dependency>
            <groupId>org.javatuples</groupId>
            <artifactId>javatuples</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-core</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
<!--                    <compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
